# C2LORAGW

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.bb  sdkconfig.defaults  sdkconfig.defaults.tdeck  sdkconfig.gwNoTest
components/HAMdLNK/: CMakeLists.txt  HAMdLNK.c  Kconfig.projbuild  hamdlnk_udp.c  subframedef.c  userdata.c
components/HAMdLNK/include/: HAMdLNK.h  HAMdLNK_types.h  hamdlnk_udp.h  subframedef.h
components/arch/: bigendian.h  compiler.h  littleendian.h
components/board/: CMakeLists.txt  breadboard.h  c2loragw.h  hardware.h  heltec_wifi_lora_v3.h  lilygo_tdeck.h
components/c2lora/: C2LORA_core.c  C2LORA_hamdlnk.c  C2LORA_header.c  C2LORA_modes.c  CMakeLists.txt  c2lora_uhf.c  obsolete.c
components/c2lora/include/: C2LORA.h  C2LORA_core.h  C2LORA_hamdlnk.h  C2LORA_header.h  C2LORA_modes.h  c2lora_uhf.h
components/codec2/: CMakeLists.txt  codec2.c  quantise.c  sine.c
components/codec2/codebook/: codebook.c  codebookd.c  codebookge.c  codebookjmv.c  codebooknewamp1.c  codebooknewamp1_energy.c  codebooknewamp2.c  codebooknewamp2_energy.c
components/codec2/include/: defines.h
components/codec2/include/codec2/: version.h
components/deviceconfig/: CMakeLists.txt  MasterIni.c  component.mk
components/deviceconfig/include/: MasterIni.h
components/fonts/: 1bit_Hack_09x17.c  1bit_Hack_13x24.c  1bit_Hack_16x29.c  BIGnumbers.c  CMakeLists.txt  Hack18Ascii.c  Hack30Ascii.c  Hack60Ascii.c  HackBig40.c  HackSmall12.c  HackStd20.c  fonts.c
components/fonts/include/: font_exports.h  fonts.h
components/localaudio/: CMakeLists.txt  Kconfig.projbuild  input_codecs.c  localaudio.c  max98357a.c  output_codecs.c
components/localaudio/include/: input_codecs.h  localaudio.h  max98357a.h  output_codecs.h
components/localrecorder/: CMakeLists.txt  localrecorder.c
components/localrecorder/include/: localrecorder.h
components/network/: BlueSPP.c  CMakeLists.txt  Ethernet.c  Kconfig.projbuild  LAN.c  OTA.c  WiFiSTA.c  ntp_getter.c
components/network/include/: BlueSPP.h  Ethernet.h  LAN.h  OTA.h  WiFiSTA.h
components/oled_display/: CMakeLists.txt  OLED.c  SSD1306.c  fonts1bit.c
components/oled_display/include/: OLED.h  SSD1306.h  font_exports.h
components/s_driver/: CMakeLists.txt  i2s_loop.c  s_buffer.c  s_spi.c
components/s_driver/include/: i2s_loop.h  s_buffer.h  s_spi.h
components/sx126x_driver/: CMakeLists.txt
components/tft_display/: Backlight.c  CMakeLists.txt  ST7789.c  TFT.c  font2disp.c  font2ram.c
components/tft_display/include/: Backlight.h  DynRender.h  ST7789.h  TFT.h  font_exports.h
components/ui/: CMakeLists.txt  ui_tft320x240.c
components/ui/include/: ui.h
components/ui_128x64x1/: CMakeLists.txt  Kconfig.projbuild  ui_oled128x64.c
components/ui_320x170x16/: CMakeLists.txt  ui_tft320x170.c
components/utilities/: CMakeLists.txt  IniFileRead.c  checksums.c  utilities.c
components/utilities/include/: IniFileRead.h  checksums.h  utilities.h
documentation/: C2LORA modes.md  hardware.md  project_description.md
kicad/: C2LoraGateway.kicad_pcb  C2LoraGateway.kicad_prl  C2LoraGateway.kicad_pro  C2LoraGateway.kicad_sch  LoraModule.kicad_sch  PowerSupply.kicad_sch
kicad/Gerber/: C2LoraGateway-B_Cu.gbr  C2LoraGateway-B_Mask.gbr  C2LoraGateway-B_Paste.gbr  C2LoraGateway-B_Silkscreen.gbr  C2LoraGateway-Edge_Cuts.gbr  C2LoraGateway-F_Cu.gbr  C2LoraGateway-F_Mask.gbr  C2LoraGateway-F_Paste.gbr  C2LoraGateway-F_Silkscreen.gbr  C2LoraGateway-In1_Cu.gbr  C2LoraGateway-In2_Cu.gbr  C2LoraGateway-NPTH-drl.gbr  C2LoraGateway-PTH-drl.gbr  C2LoraGateway-job.gbrjob
kicad/bom/: C2LoraGW_ibom.html
main/: CMakeLists.txt  Kconfig.projbuild  hamdlnk2audio.c  main.c  udp_announcer.c
main/include/: hamdlnk2audio.h  udp_announcer.h
parttables/: PartTable08MiB.csv  PartTable16MiB.csv
tools/: generate_codebook
